fix: update Header and Section components for improved styling; enhance ProfileImage hover effects and adjust scrollbar animation timing

--- a/style/globals.css
+++ b/style/globals.css
@@ -137,9 +137,8 @@
     transform: scale(1);
   }
 }
-
 .animate-scrollbar{
-  animation: scrollBar 0.5s ease-out;
+  animation: scrollBar 0.5s linear;
   animation-timeline: view();
   animation-range: entry 0% cover 40%;
 }
